documentation and tests applied
